Fix image responsiveness on mobile

--- a/articles.css
+++ b/articles.css
@@ -18,3 +18,7 @@
   flex-wrap: wrap;
 }
 
+img {
+  width: 100%;
+  height: auto;
+}
